# scout_wamr.c

./: .gitmodules  CMakeLists.txt  README.md  bls12-381.yaml  bls12-synth-loop.yaml  bls12-two-pairings-standalone.yaml  main_with_websnark_bignum_hostfuncs_f1m_mul.wasm  main_with_websnark_bignum_hostfuncs_f1m_mul.wat  main_with_websnark_bignum_hostfuncs_f1m_muladdsub.wasm  main_with_websnark_bignum_hostfuncs_f1m_muladdsub.wat  main_with_websnark_bignum_hostfuncs_f1m_muladdsubsquare.wasm  main_with_websnark_bignum_hostfuncs_f1m_muladdsubsquare.wat  prep.wat  prep.yaml  scout.c  scout.exec
